# point-cloud-mrophing

./: .gitignore  CONTRIBUTING.md  LICENSE  README.md  SECURITY.md  TPS.py  gam_out.out  morphing-s.py  morphing.py  pcm.py  pyproject.toml  test.ipynb  teste.py  utils.py
.github/: PULL_REQUEST_TEMPLATE.md
.github/ISSUE_TEMPLATE/: bug_report.yml  feature_request.yml
.github/workflows/: ci.yml  pages.yml
benchmark/: 1.read_data_test.py  2.MF_test.py  4.TPS_test.py
debug/: 1.read_data.py  1.read_data_test.py  2.MF.py  2.MF_test.py  3.sigsim.py  3.sigsim_test.py  4.TPS_test.py  sigsim_test.py
docs/: index.html
result/: rawdata_test.npy  variogram_exhausted.npy  variogram_exhausted_test.npy
src/: morphing.py
src/point_cloud_morphing/: __init__.py  __main__.py  cli.py  data.py  diagnostics.py  gslib.py  mapping.py  models.py  pairing.py  pipeline.py  variogram.py
tests/: conftest.py  test_benchmark_pipeline.py
