[build-system]
requires = ["setuptools>=68"]
build-backend = "setuptools.build_meta"

[project]
name = "point-cloud-morphing"
version = "0.1.0"
description = "Spatial Multivariate Morphing Transformation for geostatistical simulation."
readme = "README.md"
requires-python = ">=3.9"
dependencies = [
  "numpy>=1.26,<3",
  "pandas>=2.1,<3",
  "POT>=0.9.1,<1",
  "scipy>=1.11,<2",
  "tqdm>=4.65,<5",
]

[project.optional-dependencies]
dev = ["ruff>=0.6"]

[project.scripts]
smmt = "morphing:main"

[tool.setuptools]
py-modules = ["morphing"]

[tool.ruff]
line-length = 120
target-version = "py39"

[tool.ruff.lint]
select = ["E", "F", "I", "UP"]
