[build-system]
requires = ["setuptools>=68"]
build-backend = "setuptools.build_meta"

[project]
name = "point-cloud-morphing"
version = "0.1.0"
description = "Spatial Multivariate Morphing Transformation for geostatistical simulation."
readme = "README.md"
requires-python = ">=3.9"
dependencies = [
  "matplotlib>=3.8,<4",
  "numpy>=1.26,<3",
  "pandas>=2.1,<3",
  "POT>=0.9.1,<1",
  "scipy>=1.11,<2",
  "tqdm>=4.65,<5",
]

[project.optional-dependencies]
dev = [
  "pytest>=8,<9",
  "ruff>=0.6",
]

[project.scripts]
smmt = "point_cloud_morphing.cli:main"

[tool.setuptools]
package-dir = {"" = "src"}
py-modules = ["morphing"]

[tool.setuptools.packages.find]
where = ["src"]

[tool.setuptools.package-data]
point_cloud_morphing = ["py.typed"]

[tool.ruff]
line-length = 120
target-version = "py39"

[tool.ruff.lint]
select = ["E", "F", "I", "UP"]

[tool.pytest.ini_options]
testpaths = ["tests"]
filterwarnings = [
  "ignore::pyparsing.PyparsingDeprecationWarning",
]
